完成文章管理相关功能的开发

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               >
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/art_cate.html" target="fm"
                     ><i
                       class="layui-icon layui-icon-face-smile layui-icon-app"
                     ></i
@@ -75,7 +75,7 @@
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/art_list.html" target="fm"
                     ><i
                       class="layui-icon layui-icon-face-smile layui-icon-app"
                     ></i
@@ -83,7 +83,7 @@
                   >
                 </dd>
                 <dd>
-                  <a href="javascript:;"
+                  <a href="/article/art_pub.html" target="fm"
                     ><i
                       class="layui-icon layui-icon-face-smile layui-icon-app"
                     ></i
